<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    card_view:cardBackgroundColor="#415FBAD1"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#578DC1C8"
        android:padding="16dp">

        <ImageView
            android:id="@+id/item_image_vista"
            android:layout_width="107dp"
            android:layout_height="102dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/foto"
            card_view:srcCompat="@drawable/plaza" />

        <TextView
            android:id="@+id/item_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/item_image_vista"
            android:fontFamily="@font/coneria_script"
            android:text="@string/planetario"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_titulo"
            android:layout_toEndOf="@+id/item_image_vista"
            android:fontFamily="sans-serif-light"
            android:text="@string/item_descripcion"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_calificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_descripcion"
            android:layout_marginStart="37dp"
            android:layout_marginTop="21dp"
            android:layout_toEndOf="@+id/item_image_vista"
            android:text="@string/item_calificacion"
            android:textColor="#704FAA"
            android:textSize="16sp"
            android:textStyle="bold|italic" />


    </RelativeLayout>


 </androidx.cardview.widget.CardView>