<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".detalle.DetalleActivity">

    <TextView
        android:id="@+id/nombre_text_view"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/motion_picture"
        android:text="@string/planetario_view"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="49sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <ImageView
        android:id="@+id/picture_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="550dp"
        android:background="#005BC7E3"
        android:clipToOutline="true"
        android:contentDescription="@string/iamgen_cabeza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@drawable/planetario"
        tools:ignore="MissingConstraints"
        tools:targetApi="s" />

    <TextView
        android:id="@+id/descripcion_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/descripcion_planetario_nueva"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_text_view"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/label_temperatura_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatura"
        android:textColor="@color/primary_dark"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_text_view"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/calificacion_text_view"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/calificacion_planetario_nuevo"
        android:textColor="@color/accent"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_temperatura_text_view"
        app:layout_constraintVertical_bias="0.714" />

    <ImageView
        android:id="@+id/label_picture_image_view"
        android:layout_width="47dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="104dp"
        android:contentDescription="@string/estrella"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calificacion_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_temperatura_text_view"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/ic_baseline_trending_up_24"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/mapButton"
        android:layout_width="71dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/mapa"
        android:src="@drawable/ic_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calificacion_text_view"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>